--- a/src/androidTest/res/drawable/corners.xml
+++ b/src/androidTest/res/drawable/corners.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
+        android:bottomRightRadius="5px"
         android:radius="10px"
-        android:topLeftRadius="15px"
-        android:bottomRightRadius="5px" />
+        android:topLeftRadius="15px" />
     <solid android:color="#666666" />
 </shape>
